Fixes spacing on manga panel and corners

--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -148,9 +148,11 @@ a
   background-color: Gray
   opacity: 0.9
   margin: 10px auto
+  border-radius: 25px
 
 .thumbnail
   width: 150px
+  margin-left: 4%
 
 .tg
   border-collapse: collapse
@@ -372,3 +374,10 @@ section a
   color: #3596e0
   left: initial
   font-size: 14px
+  
+td
+  overflow: hidden
+  word-break: normal
+    
+#plot
+  margin-left: 1%
